<resources>
    <string name="webrtc_chat_notify">媒体通话</string>
    <string name="webrtc_chat_mute">静音</string>
    <string name="webrtc_chat_hands_free">免提</string>
    <string name="webrtc_chat_refuse">拒接</string>
    <string name="webrtc_chat_answer">接听</string>
    <string name="webrtc_chat_hang_up">挂断</string>
    <string name="webrtc_switch_voice">切到语音</string>
    <string name="webrtc_switch_camera">切换</string>

    <string name="pref_speakerphone_key">speakerphone_preference</string>
    <string name="pref_speakerphone_default">auto</string>

    <string name="webrtc_invite_outgoing">呼出中&#8230;</string>
    <string name="webrtc_invite_waiting">等待对方接听&#8230;</string>
    <string name="webrtc_invite_connect">连接中&#8230;</string>

    <string name="webrtc_receive_incoming">对方邀请您进行通话&#8230;</string>
    <string name="webrtc_receive_connect">连接中&#8230;</string>
    <string name="webrtc_receive_cancel">对方已取消&#8230;</string>


    <string name="webrtc_chat_has_refuse">已拒绝</string>
    <string name="webrtc_chat_has_cancel">已取消</string>
    <string name="webrtc_chat_other_has_refuse">对方已拒绝</string>
    <string name="webrtc_chat_other_has_cancel">对方已取消</string>
    <string name="webrtc_chat_time">通话时长：%s</string>


</resources>
