<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--语音通话头像和昵称-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--头像-->
        <ImageView
            android:id="@+id/wr_invite_avatar"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="120dp"
            android:src="@drawable/webrtc_avatar_default" />

        <!--好友昵称-->
        <TextView
            android:id="@+id/wr_invite_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/wr_invite_avatar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="好友名称"
            android:textColor="@android:color/white"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/wr_invite_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/wr_invite_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/webrtc_invite_outgoing"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <!--控制按钮-->
    <RelativeLayout
        android:id="@+id/wr_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:padding="20dp">

        <!--静音-->
        <TextView
            android:id="@+id/wr_switch_mute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/webrtc_btn_voice_mute"
            android:gravity="center_horizontal"
            android:text="@string/webrtc_chat_mute"
            android:textColor="@android:color/white"
            android:textSize="@dimen/wr_control_text_size" />

        <!--挂断-->
        <TextView
            android:id="@+id/wr_switch_hang_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/webrtc_cancel"
            android:gravity="center_horizontal"
            android:text="@string/webrtc_chat_hang_up"
            android:textColor="@android:color/white"
            android:textSize="@dimen/wr_control_text_size" />

        <!--切换摄像头-->
        <TextView
            android:id="@+id/wr_switch_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/webrtc_switch_camera"
            android:gravity="center_horizontal"
            android:text="@string/webrtc_switch_camera"
            android:textColor="@android:color/white"
            android:textSize="@dimen/wr_control_text_size" />
        <!--扬声器-->
        <TextView
            android:id="@+id/wr_hand_free"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/webrtc_btn_voice_hand_free"
            android:gravity="center_horizontal"
            android:text="@string/webrtc_chat_hands_free"
            android:textColor="@android:color/white"
            android:textSize="@dimen/wr_control_text_size"
            android:visibility="gone" />

    </RelativeLayout>
    <!--显示时间-->
    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/wr_control"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white" />
</RelativeLayout>
